# celadon

./: .gitignore  CMakeLists.txt  README.md
src/: gui.cpp
src/bsdfs/: Lambertian.cpp  Lambertian.hpp  Specular.cpp  Specular.hpp
src/cameras/: PinholeCamera.cpp  PinholeCamera.hpp
src/core/: BSDF.hpp  Camera.hpp  Image.cpp  Image.hpp  Integrator.hpp  Light.hpp  Math.hpp  Ray.hpp  Renderer.cpp  Renderer.hpp  Sampler.hpp  Scene.cpp  Scene.hpp  Shape.hpp  SurfaceHit.hpp  Timer.cpp  Timer.hpp
src/integrators/: Normal.cpp  Normal.hpp  NormalIntegrator.cpp  NormalIntegrator.hpp  PathIntegrator.cpp  PathIntegrator.hpp  Whitted.cpp  Whitted.hpp
src/lights/: AreaLight.cpp  AreaLight.hpp  PointLight.cpp  PointLight.hpp
src/samplers/: RandomSampler.cpp  RandomSampler.hpp
src/shapes/: Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
